{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 241,
  "lineage": "ab3e3513-8bc3-bbf1-fda7-e5e10de99bfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b431eeb746b7e36a",
            "association_id": "eipassoc-09a49ed10d27c79c5",
            "domain": "vpc",
            "id": "eipalloc-0b431eeb746b7e36a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e097e3664f5cd151",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-34-203-147-90.compute-1.amazonaws.com",
            "public_ip": "34.203.147.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT_0"
            },
            "tags_all": {
              "Name": "EIP_for_NAT_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050708d9b2b37da93",
            "association_id": "eipassoc-07444134747219575",
            "domain": "vpc",
            "id": "eipalloc-050708d9b2b37da93",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a1019962aa0493fd",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-54-173-244-84.compute-1.amazonaws.com",
            "public_ip": "54.173.244.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT_1"
            },
            "tags_all": {
              "Name": "EIP_for_NAT_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdec96e6ac4191ae",
            "association_id": "eipassoc-0297cff7059d2cf9f",
            "domain": "vpc",
            "id": "eipalloc-0fdec96e6ac4191ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b72d51795b322b90",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-52-206-146-120.compute-1.amazonaws.com",
            "public_ip": "52.206.146.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT_2"
            },
            "tags_all": {
              "Name": "EIP_for_NAT_2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dkigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:internet-gateway/igw-00f358f4436456c14",
            "id": "igw-00f358f4436456c14",
            "owner_id": "152729937704",
            "tags": {
              "Name": "dk-igw"
            },
            "tags_all": {
              "Name": "dk-igw"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dkalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:152729937704:loadbalancer/app/dk-alb/c0dafecde1bfe620",
            "arn_suffix": "app/dk-alb/c0dafecde1bfe620",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dk-alb-1460634665.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:152729937704:loadbalancer/app/dk-alb/c0dafecde1bfe620",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dk-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c55163ecb56f98a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e58dc969800455f"
              },
              {
                "subnet_id": "subnet-0d9cdeb2976a52326"
              },
              {
                "subnet_id": "subnet-0f6c85cd5aec7d2ba"
              }
            ],
            "subnets": [
              "subnet-03e58dc969800455f",
              "subnet-0d9cdeb2976a52326",
              "subnet-0f6c85cd5aec7d2ba"
            ],
            "tags": {
              "Name": "ecs-alb"
            },
            "tags_all": {
              "Name": "ecs-alb"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front-end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:152729937704:listener/app/dk-alb/c0dafecde1bfe620/b70bd8b55b0523fb",
            "certificate_arn": "arn:aws:acm:us-east-1:152729937704:certificate/ff3d3264-01f3-492b-9568-70841853e20c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:152729937704:targetgroup/alb-ecs-target-group/2761b45e3f88b476",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:152729937704:listener/app/dk-alb/c0dafecde1bfe620/b70bd8b55b0523fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:152729937704:loadbalancer/app/dk-alb/c0dafecde1bfe620",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dkalb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:152729937704:targetgroup/alb-ecs-target-group/2761b45e3f88b476",
            "arn_suffix": "targetgroup/alb-ecs-target-group/2761b45e3f88b476",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:152729937704:targetgroup/alb-ecs-target-group/2761b45e3f88b476",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dknat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b431eeb746b7e36a",
            "association_id": "eipassoc-09a49ed10d27c79c5",
            "connectivity_type": "public",
            "id": "nat-0cc7aad327642e550",
            "network_interface_id": "eni-0e097e3664f5cd151",
            "private_ip": "10.0.1.14",
            "public_ip": "34.203.147.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f6c85cd5aec7d2ba",
            "tags": {
              "Name": "dk-NAT"
            },
            "tags_all": {
              "Name": "dk-NAT"
            }
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050708d9b2b37da93",
            "association_id": "eipassoc-07444134747219575",
            "connectivity_type": "public",
            "id": "nat-0662e020f661bab93",
            "network_interface_id": "eni-0a1019962aa0493fd",
            "private_ip": "10.0.1.61",
            "public_ip": "54.173.244.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9cdeb2976a52326",
            "tags": {
              "Name": "dk-NAT"
            },
            "tags_all": {
              "Name": "dk-NAT"
            }
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdec96e6ac4191ae",
            "association_id": "eipassoc-0297cff7059d2cf9f",
            "connectivity_type": "public",
            "id": "nat-008a2b14076ab6c9c",
            "network_interface_id": "eni-0b72d51795b322b90",
            "private_ip": "10.0.1.70",
            "public_ip": "52.206.146.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e58dc969800455f",
            "tags": {
              "Name": "dk-NAT"
            },
            "tags_all": {
              "Name": "dk-NAT"
            }
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-06558fc7f7f4649d7",
            "id": "rtb-06558fc7f7f4649d7",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc7aad327642e550",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-01d02ad5e8e57c7b2",
            "id": "rtb-01d02ad5e8e57c7b2",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0662e020f661bab93",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-0ea94fa88571e9b23",
            "id": "rtb-0ea94fa88571e9b23",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008a2b14076ab6c9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-0c92ad389d5e5e1f6",
            "id": "rtb-0c92ad389d5e5e1f6",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc7aad327642e550",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-db-rt"
            },
            "tags_all": {
              "Name": "three-tier-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-0e3a7ba9b4bbdf1bb",
            "id": "rtb-0e3a7ba9b4bbdf1bb",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0662e020f661bab93",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-db-rt"
            },
            "tags_all": {
              "Name": "three-tier-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-028ce6425d31f8dab",
            "id": "rtb-028ce6425d31f8dab",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008a2b14076ab6c9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-db-rt"
            },
            "tags_all": {
              "Name": "three-tier-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:route-table/rtb-0a4c33a8b6b081840",
            "id": "rtb-0a4c33a8b6b081840",
            "owner_id": "152729937704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f358f4436456c14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-rt"
            },
            "tags_all": {
              "Name": "web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f1fe719275002c",
            "route_table_id": "rtb-06558fc7f7f4649d7",
            "subnet_id": "subnet-0fb705105879e1f00"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_route_table.app-rt",
            "aws_subnet.app",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024f7748de69dccdc",
            "route_table_id": "rtb-01d02ad5e8e57c7b2",
            "subnet_id": "subnet-012bc7c329b47a71e"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_route_table.app-rt",
            "aws_subnet.app",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73ffea64178a94a",
            "route_table_id": "rtb-0ea94fa88571e9b23",
            "subnet_id": "subnet-082489c56242537c5"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.dkigw",
            "aws_nat_gateway.dknat",
            "aws_route_table.app-rt",
            "aws_subnet.app",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cbd61201da49eae",
            "route_table_id": "rtb-0a4c33a8b6b081840",
            "subnet_id": "subnet-0f6c85cd5aec7d2ba"
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_route_table.web-rt",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfcdabcc4252f47e",
            "route_table_id": "rtb-0a4c33a8b6b081840",
            "subnet_id": "subnet-0d9cdeb2976a52326"
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_route_table.web-rt",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61664ac8d14dd8a",
            "route_table_id": "rtb-0a4c33a8b6b081840",
            "subnet_id": "subnet-03e58dc969800455f"
          },
          "dependencies": [
            "aws_internet_gateway.dkigw",
            "aws_route_table.web-rt",
            "aws_subnet.web",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:security-group/sg-0c55163ecb56f98a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c55163ecb56f98a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web security group",
            "name_prefix": "",
            "owner_id": "152729937704",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:security-group/sg-003987e4d71f441e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003987e4d71f441e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c55163ecb56f98a3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app security group",
            "name_prefix": "",
            "owner_id": "152729937704",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:security-group/sg-0df3e2e269b3dddcb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df3e2e269b3dddcb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow request from only app layer Security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003987e4d71f441e8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db security group",
            "name_prefix": "",
            "owner_id": "152729937704",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-0fb705105879e1f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb705105879e1f00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-0"
            },
            "tags_all": {
              "Name": "app-0"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-012bc7c329b47a71e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bc7c329b47a71e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1"
            },
            "tags_all": {
              "Name": "app-1"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-082489c56242537c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082489c56242537c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-2"
            },
            "tags_all": {
              "Name": "app-2"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-04b8e3e53d74f731b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b8e3e53d74f731b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-0"
            },
            "tags_all": {
              "Name": "db-0"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-0dde73cb5a2ecf1d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dde73cb5a2ecf1d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-06abf4beaad9196ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06abf4beaad9196ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-2"
            },
            "tags_all": {
              "Name": "db-2"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-0f6c85cd5aec7d2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c85cd5aec7d2ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-0"
            },
            "tags_all": {
              "Name": "web-0"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-0d9cdeb2976a52326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9cdeb2976a52326",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:subnet/subnet-03e58dc969800455f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e58dc969800455f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152729937704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-2"
            },
            "tags_all": {
              "Name": "web-2"
            },
            "vpc_id": "vpc-067e5a2d56711f6f7"
          },
          "dependencies": [
            "aws_vpc.dkvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dkvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152729937704:vpc/vpc-067e5a2d56711f6f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f138bcee77f0853",
            "default_route_table_id": "rtb-01764ae518cf0fa52",
            "default_security_group_id": "sg-0ddc593f110975f5b",
            "dhcp_options_id": "dopt-0e3379b94334d4cca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067e5a2d56711f6f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01764ae518cf0fa52",
            "owner_id": "152729937704",
            "tags": {
              "Name": "3-tier-vpc"
            },
            "tags_all": {
              "Name": "3-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}